--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             const webhookUrl = 'https://hooks.zapier.com/hooks/catch/14863026/3r4fr2r/';
             fetch(webhookUrl, {
             method: 'POST',
-            body: JSON.stringify(data),
+            body: data,
             headers: {
                 'Content-Type': 'application/json',
             },
