--- a/index.html
+++ b/index.html
@@ -324,24 +324,32 @@
 
         // Function to send user data to the webhook (replace with your actual webhook URL)
         function sendDataToWebhook(data) {
-            const webhookUrl = 'https://hooks.zapier.com/hooks/catch/14863026/3r4fr2r/';
-            fetch(webhookUrl, {
-            method: 'POST',
-            body: data,
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            })
-            .then((response) => {
-                if (response.ok) {
-                console.log('Data sent successfully to the webhook.');
+              // Create a new XMLHttpRequest object
+            var xhr = new XMLHttpRequest();
+            
+            // Define the webhook URL
+            var webhookUrl = 'https://hooks.zapier.com/hooks/catch/14863026/3r4fr2r/';
+            
+            // Configure the request
+            xhr.open('POST', webhookUrl, true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+
+            // Define a callback function to handle the response
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState === 4) {
+                if (xhr.status === 200) {
+                    console.log('Data sent successfully to the webhook.');
                 } else {
-                console.error('Failed to send data to the webhook.');
+                    console.error('Failed to send data to the webhook.');
                 }
-            })
-            .catch((error) => {
-                console.error('Error sending data to the webhook:', error);
-            });
+                }
+            };
+
+            // Convert the data object to JSON
+            var jsonData = JSON.stringify(data);
+
+            // Send the request with the JSON data
+            xhr.send(jsonData);
 
             if (data.question4 === "Yes") {
                 console.log(data.question4);
