--- a/index.html
+++ b/index.html
@@ -324,26 +324,26 @@
 
         // Function to send user data to the webhook (replace with your actual webhook URL)
         function sendDataToWebhook(data) {
-              // Create a new XMLHttpRequest object
-            var xhr = new XMLHttpRequest();
-            
-            // Define the webhook URL
-            var webhookUrl = 'https://hooks.zapier.com/hooks/catch/14863026/3r4fr2r/';
-            
-            // Configure the request
-            xhr.open('POST', webhookUrl, true);
-            xhr.setRequestHeader('Content-Type', 'application/json');
+            const webhookUrl = 'https://hooks.zapier.com/hooks/catch/14863026/3r4fr2r/';
 
-            // Define a callback function to handle the response
-            xhr.onreadystatechange = function () {
-                if (xhr.readyState === 4) {
-                if (xhr.status === 200) {
+            // Configure the request
+            fetch(webhookUrl, {
+                method: 'POST',
+                headers: {
+                'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(data), // Convert data to JSON
+            })
+                .then((response) => {
+                if (response.ok) {
                     console.log('Data sent successfully to the webhook.');
                 } else {
                     console.error('Failed to send data to the webhook.');
                 }
-                }
-            };
+                })
+                .catch((error) => {
+                console.error('Error sending data to the webhook:', error);
+                });
 
             // Convert the data object to JSON
             // var jsonData = JSON.stringify(data);
